--- a/TLALOCSG/appsettings.json
+++ b/TLALOCSG/appsettings.json
@@ -14,5 +14,16 @@
     "ValidAudience": "http://localhost:4200",
     "ValidIssuer": "http://localhost:5000",
     "expireInMinutes": 60
+  },
+  "SMTP": {
+    "Host": "smtp.gmail.com",
+    "Port": 587,
+    "User": "luisrosasbocanegra@gmail.com",
+    "Password": "oxzg swhh nsjf jxer", // usa App Password (Gmail)
+    "From": "TLÁLOC <luisrosasbocanegra@gmail.com>",
+    "EnableSsl": true
+  },
+  "Support": {
+    "Inbox": "luisrosasbocanegra@gmail.com" // correo que recibirá avisos
   }
 }
